--- a/ullfs/Cargo.toml
+++ b/ullfs/Cargo.toml
@@ -13,6 +13,7 @@ env_logger = "0.10"
 libc = "0.2"
 log = "0.4"
 tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
+serde_json = "1.0.128"
 
 [[bin]]
 name = "ullfs"
