--- a/config.json
+++ b/config.json
@@ -1,3 +1,6 @@
 {
-    "watch_dir":"/home/wtech/Documents/testets"
+    "watch_dir":"/home/zmanjaroschool/TestDir",
+    "ignore_ext":[".kate-swp"],
+    "ignore_subdirs":[],
+    "ignore_files":[]
 }
