--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "watch_dir":"/home/zmanjaroschool/TestDir",
+    "watch_dir":"/home/wtech/TestFolder",
     "ignore_ext":[".kate-swp"],
     "ignore_subdirs":[],
     "ignore_files":[]
