--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
-    "watch_dir":"/home/wtech/TestFolder",
+    "watch_dir":"/home/zmanjaroschool/TestDir",
     "ignore_ext":[".kate-swp"],
     "ignore_subdirs":[],
-    "ignore_files":[]
+    "ignore_files":[],
+    "ignore_hidden_files": true
 }
