--- a/ullfs/Cargo.toml
+++ b/ullfs/Cargo.toml
@@ -14,6 +14,7 @@ libc = "0.2"
 log = "0.4"
 tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
 serde_json = "1.0.128"
+signal-hook = "0.3.17"
 
 [[bin]]
 name = "ullfs"
