--- a/ullfs/Cargo.toml
+++ b/ullfs/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-aya = "0.12"
+aya = {version = "0.13", features = ["async_tokio"]}
 aya-log = "0.2"
 ullfs-common = { path = "../ullfs-common", features = ["user"] }
 anyhow = "1"
@@ -15,6 +15,7 @@ log = "0.4"
 tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
 serde_json = "1.0.128"
 signal-hook = "0.3.17"
+bytes = "1.8.0"
 
 [[bin]]
 name = "ullfs"
