--- a/ullfs/Cargo.toml
+++ b/ullfs/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net"
 serde_json = "1.0.128"
 signal-hook = "0.3.17"
 bytes = "1.8.0"
+ignore = "0.4.23"
 
 [[bin]]
 name = "ullfs"
