Updated client.rs, fileFilter.rs, and gitignore
new changes include:
 - Attempting to remove the bloat from client.rs. May break the code for a little
 - Added to getter functions in fileFilter to retrieve the dns_web_address, client_port, and base_dir
 - Added config.json file to the gitignore file. Hopefully this stops us from having to change the file everytime we pull someone else's changes

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "watch_dir":"/home/zmanjaroschool/TestDir",
-    "dns_web_address":"192.168.1.212",
+    "watch_dir":"/home/trevor/Documents/TestDir",
+    "dns_web_address":"server.homiecourt.xyz",
     "client_port":"34254",
     "ignore_ext":[".kate-swp"],
     "ignore": [
