--- a/config.json
+++ b/config.json
@@ -1,10 +1,14 @@
 {
-    "watch_dir":"/home/wtech/TestFolder",
-    "dns_web_address":"server.homiecourt.xyz",
+    "watch_dir":"/home/zmanjaroschool/TestDir",
+    "dns_web_addresses":[
+        "server.homiecourt.xyz",
+    ],
     "client_port":"34254",
     "ignore_ext":[".kate-swp"],
     "ignore": [
         
-    ]
+    ],
+    "file_store_time_seconds":100,
+    "max_total_size_mb":1000
     
 }
