--- a/ullfs/Cargo.toml
+++ b/ullfs/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0.128"
 signal-hook = "0.3.17"
 bytes = "1.8.0"
 ignore = "0.4.23"
+xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
 
 [[bin]]
 name = "ullfs"
