--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     "dns_web_addresses":[
         "127.0.0.1"
     ],
-    "client_port":"34254",
+    "server_port":"34254",
     "ignore_ext":[".kate-swp"],
     "ignore": [
         
