--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2021"
 [dependencies]
 ignore = "0.4.23"
 serde_json = "1.0.139"
+tokio = {version = "1.43.0", features = ["full"]}
 xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
