--- a/ullfs/Cargo.toml
+++ b/ullfs/Cargo.toml
@@ -12,7 +12,7 @@ anyhow = "1"
 env_logger = "0.10"
 libc = "0.2"
 log = "0.4"
-tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
+tokio = { version = "1.25", features = ["full"] }
 serde_json = "1.0.128"
 signal-hook = "0.3.17"
 bytes = "1.8.0"
