--- a/xtask/Cargo.toml
+++ b/xtask/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 clap = { version = "4.1", features = ["derive"] }
+[patch.crates-io]
+tokio = { version = "1.43" }
