--- a/ullfs/Cargo.toml
+++ b/ullfs/Cargo.toml
@@ -22,6 +22,7 @@ steady_state = {version = "0.1.2", features = ["proactor_tokio"]}
 args = "2.2.0"
 structopt-derive = "0.4.18"
 structopt = "0.3.26"
+futures-util = "0.3.31"
 
 [dev-dependencies]
 async-std        = {  version = "1.13.0", features = ["attributes"] }
