--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ fossil-delta     = "0.2.0"
 librsync         = "0.2.3"
 serde_json = "1.0.140"
 ignore = "0.4.23"
+notify = "8.0.0"
 
 
 [dev-dependencies]
